# Paradiso

./: .gitignore  docker-compose.yaml  requirements.txt
backend/: .dockerignore  .env  .gitignore  Dockerfile  client_secret_860667933707-fj6mldt6a8ch0t2rat6kj6cb5bcke32i.apps.googleusercontent.com.json  db.sqlite3  entrypoint.sh  pyproject.toml  requirements.txt  requirements_dev.txt
backend/Utility/: compress_image.py  set_cache_headers.py
backend/authentication/: admin.py  manager.py  models.py  serializers.py  urls.py  views.py
backend/authentication/migrations/: 0001_initial.py  0002_remove_customuser_username.py
backend/backend/: settings.py  urls.py
backend/home/: urls.py
backend/payments/: urls.py
backend/payments/views/: __init__.py  payment_view.py
backend/shop/: admin.py  apps.py  models.py  router.py  serializers.py  signals.py  urls.py  views.py
backend/shop/admin/: __init__.py  cart_admin.py  favorites_admin.py  order_admin.py  product_admin.py  product_image_admin.py  subcategory_admin.py
backend/shop/data/: accessories.csv  bags.csv  beauty.csv  kids.csv  men.csv  shoes.csv  women.csv
backend/shop/migrations/: 0001_initial.py  0002_alter_product_brand.py  0002_alter_productimage_image.py  0002_alter_variants_options_alter_variants_table.py  0002_remove_order_products_delete_orderitem.py  0003_orderitem_order_products.py  0003_product_description.py  0003_rename_price_product_current_price_product_discount_and_more.py  0003_subcategory_image_men_subcategory_image_women.py  0004_alter_productimage_image.py  0004_cart_total.py  0004_product_likes.py  0004_subcategory_card_view.py  0005_remove_order_products.py  0005_remove_product_category_product_category.py  0005_rename_image_men_subcategory_image_primary_and_more.py  0010_order.py  (+11 more)
(+94 files in other folders)
